# DarkLogic

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  configure  main.cpp
.github/workflows/: ccpp.yml  dockerimage.yml  dockerpublish.yml
AI/: ai.cpp  ai.h  aithread.cpp  aithread.h  dbaction.cpp  dbaction.h  evalai.cpp  evalai.h  event.cpp  event.h  masteraithread.cpp  masteraithread.h  node.cpp  node.hpp
CI/: Dockerfile
DarkLogic/: CMakeLists.txt  darklogic.cpp  darklogic.h  logic.cpp  logic.h  logic_global.h
DarkLogic/Formula/: dbvarprop.cpp  dbvarprop.h  evaluater.cpp  evaluater.h  formula.cpp  formula.h  formula.hxx  iisubruleformula.cpp  iisubruleformula.h  iisubtheoremformula.cpp  iisubtheoremformula.h  isubruleformula.h  isubtheoremformula.h  parser.cpp  parser.h  valuetypeobject.cpp  valuetypeobject.h
DarkLogic/Formula/Arithmetic/: aarithmeticformula.cpp  aarithmeticformula.h  allarithformula.h  asubarithmeticrule.h  asubarithmetictheorem.h  inontermarithmetic.cpp  inontermarithmetic.h  subarithmeticrule.h  subarithmetictheorem.h
DarkLogic/Formula/Arithmetic/ConstantFormula/: constantruleformula.h  constanttheoremformula.h
DarkLogic/Formula/Arithmetic/PlusFormula/: plusruleformula.h  plustheoremformula.h
DarkLogic/Formula/Arithmetic/SetEqualFormula/: setequalruleformula.h  setequaltheoremformula.h
DarkLogic/Formula/Arithmetic/VariableFormula/: variableruleformula.h  variabletheoremformula.h
DarkLogic/Formula/Boolean/: allproposition.h  allrule.h  allsubtheorem.h  asubimpurerule.cpp  asubimpurerule.h  asubimpuretheorem.cpp  asubimpuretheorem.h  asubpurerule.cpp  asubpurerule.h  asubpuretheorem.cpp  asubpuretheorem.h  asubrule.cpp  asubrule.h  asubtheorem.cpp  asubtheorem.h  axiom.cpp  axiom.h  axiomset.h  dbrule.cpp  dbrule.h  dbtheorem.cpp  dbtheorem.h  iproposition.cpp  iproposition.h  rule.cpp  rule.h  subrule.cpp  subrule.h  subtheorem.cpp  subtheorem.h  theorem.cpp  theorem.h
DarkLogic/Formula/Boolean/BelongsTo/: subrulebelongsto.h  subtheorembelongsto.h  theorembelongsto.h
DarkLogic/Formula/Boolean/Boolean/: subruleboolean.h  subtheoremboolean.h  theoremboolean.h
DarkLogic/Formula/Boolean/ConstBoolean/: subruleconstboolean.h  subtheoremconstboolean.h  theoremconstboolean.h
DarkLogic/Formula/Boolean/Equal/: subruleequal.h  subtheoremequal.h  theoremequal.h
DarkLogic/Formula/Boolean/Generic/: subrulegeneric.h  subtheoremgeneric.h  theoremgeneric.h
DarkLogic/Formula/Boolean/Hyp/: subrulehyp.h  subtheoremhyp.h  theoremhyp.h
DarkLogic/Formula/Boolean/Let/: subrulelet.h  subtheoremlet.h  theoremlet.h
DarkLogic/Formula/Boolean/Not/: subrulenot.h  subtheoremnot.h  theoremnot.h
DarkLogic/Logger/: log.cpp  log.h
DarkLogic/Operator/: alloperator.h  ioperator.cpp  ioperator.h  operator.h  operator.hxx
DarkLogic/Operator/Arithmetic/: allarithmeticoperator.h  plus.h  setequal.h
DarkLogic/Operator/Boolean/: allbooleanoperator.h  and.h  and.hxx  belongsto.h  equal.h  equivalent.h  equivalent.hxx  hyp.h  hyp.hxx  implication.h  implication.hxx  let.h  not.h  not.hxx  or.h  or.hxx
DarkLogic/Set/: allset.h  booleanset.cpp  booleanset.h  naturalintegerset.cpp  naturalintegerset.h  omniset.h  set.cpp  set.h
DarkLogic/Utils/: action.cpp  action.h  exception.h  rulecontent.cpp  rulecontent.h  state.cpp  state.h  utils.cpp  utils.h
DarkLogic/Variable/: allvariable.h  avariable.cpp  avariable.h  constante.h  constante.hxx  dbvar.cpp  dbvar.h  term.cpp  term.h  variable.h  variable.hxx  variableexception.cpp  variableexception.h
DarkLogic/Variable/Boolean/: boolean.cpp  boolean.h  constboolean.cpp  constboolean.h  hypboolean.cpp  hypboolean.h
DarkLogic/Variable/NaturalInteger/: constnaturalinteger.cpp  constnaturalinteger.h  naturalinteger.cpp  naturalinteger.h
DarkLogic/Variable/Set/: constset.cpp  constset.h  varset.cpp  varset.h
DarkLogic/pybind11/tools/: FindPythonLibsNew.cmake  pybind11Tools.cmake
Human/: human.cpp  human.h
Logic/: CMakeLists.txt  logic.cpp  logic.h  logic_global.h
Logic/Formula/: dbrules.cpp  dbrules.h  dbvarprop.cpp  dbvarprop.h  formula.cpp  formula.h  formula.hxx  iisubruleformula.cpp  iisubruleformula.h  iisubtheoremformula.cpp  iisubtheoremformula.h  isubruleformula.cpp  isubruleformula.h  isubtheoremformula.cpp  isubtheoremformula.h  logichash.cpp  logichash.h  valuetypeobject.cpp  valuetypeobject.h
Logic/Formula/Arithmetic/: aarithmeticformula.cpp  aarithmeticformula.h  allarithformula.h  asubarithmeticrule.h  asubarithmetictheorem.h  inontermarithmetic.cpp  inontermarithmetic.h  subarithmeticrule.h  subarithmetictheorem.h
Logic/Formula/Boolean/: allproposition.h  allrule.h  allsubtheorem.h  asubimpurerule.cpp  asubimpurerule.h  asubimpuretheorem.cpp  asubimpuretheorem.h  asubpurerule.cpp  asubpurerule.h  asubpuretheorem.cpp  asubpuretheorem.h  (+23 more)
Logic/Logger/: log.cpp  log.h
Logic/Operator/: alloperator.h  ioperator.cpp  ioperator.h  operator.h  operator.hxx
Logic/Set/: allset.h  booleanset.cpp  booleanset.h  naturalintegerset.cpp  naturalintegerset.h  omniset.h  set.cpp  set.h  set_impl.h
Logic/Utils/: action.cpp  action.h  exception.h  state.cpp  state.h  utils.cpp  utils.h
Logic/Variable/: allvariable.h  avariable.cpp  avariable.h  constante.cpp  constante.h  constante.hxx  dbvar.cpp  dbvar.h  dbvar.hxx  term.cpp  term.h  variable.h  variable.hxx  variableexception.cpp  variableexception.h
MainBlackLogic/: action.h  logicgame.cpp  logicgame.h  player.cpp  player.h
MainDarkLogic/: EnumFun.h  action.cpp  action.h  dbtheorem.cpp  dbtheorem.h  logicgame.cpp  logicgame.h  player.cpp  player.h  utils.h
PyDarkLogic/: main.py
PyDarkLogic/AI/: ai.py  aithread.py  dbnode.py  deepai.py  evalai.py  event.py  masteraithread.py  neuralai.py  node.py
PyDarkLogic/Database/: database.py  deepaiMemory.csv  state.py
PyDarkLogic/Human/: human.py
PyDarkLogic/MainDarkLogic/: action.py  darklogic.py  dbtheorem.py  enumfun.py  logicgame.py  player.py
PyDarkLogic/Test/: test.py
PyDarkLogic/deepAIModel/: saved_model.pb
Tests/: test.cpp  test.h  testthread.cpp  testthread.h
(+70 files in other folders)
